# stm32-cmake-template

./: .gitignore  CMakeLists.txt  README.md
cmake/common/: common_functions.cmake
cmake/libs/: FindUNITY.cmake  FindVoid.cmake
cmake/stm32/: chip_functions.cmake  common_functions.cmake  compiler_flags.cmake  compiler_options.cmake  compiler_warnings.cmake  entrypoint.cmake  gcc_stm32.cmake  helpers_functions.cmake  project_options.cmake  stm_functions.cmake
cmake/stm32/libs/: FindCMSIS.cmake  FindSTM32HAL.cmake
cmake/stm32/specific_mcu/: gcc_stm32f0.cmake  gcc_stm32f1.cmake  gcc_stm32f2.cmake  gcc_stm32f3.cmake  gcc_stm32f4.cmake  gcc_stm32f7.cmake  gcc_stm32l0.cmake  gcc_stm32l1.cmake  gcc_stm32l4.cmake
cmake/utils/: cpptools.cmake  print_size.cmake  print_size.cmd  size_printer.py
src/: main.cpp  main_void.cpp  stm32f3xx_hal_conf.h
startup/: startup_stm32f303xc.s
